--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,45 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#000000"/>
     <meta
       name="description"
       content="Weather App created using create-react-app"
     />
+    <meta property="og:title" content="Home" />
+		<meta property="og:type" content="article" />
+		<meta
+			property="og:url"
+			content="https://res.cloudinary.com/lawfirm1000/image/upload/v1596453800/c6352e437736dbc80807e38acfc2393a_1_xzfikj.jpg"
+		/>
+		<meta
+			property="og:image"
+			content="https://res.cloudinary.com/lawfirm1000/image/upload/v1596453800/c6352e437736dbc80807e38acfc2393a_1_xzfikj.jpg"
+		/>
+		<title>Weather App</title>
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="Home - Weather App"
+		/>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-173957094-1"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+			gtag("config", "UA-173957094-1");
+		</script>
+  <link
+			href="https://res.cloudinary.com/lawfirm1000/image/upload/v1596453800/c6352e437736dbc80807e38acfc2393a_1_xzfikj.jpg"
+			rel="icon"
+		/>
+
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -15,7 +49,6 @@
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
-    <title>Weather App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
