--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:type" content="article" />
 		<meta
 			property="og:url"
-			content="https://res.cloudinary.com/lawfirm1000/image/upload/v1596453800/c6352e437736dbc80807e38acfc2393a_1_xzfikj.jpg"
+			content="https://weather-app-femi.netlify.app"
 		/>
 		<meta
 			property="og:image"
